--- a/bluebottle/common/static/refactor-sass/_variables.scss
+++ b/bluebottle/common/static/refactor-sass/_variables.scss
@@ -2,61 +2,30 @@
 // SET YOUR EDITOR TO USING TABS AND TAB SIZE OF 4 FOR PROPER ALIGNMENT
 // OF THE VARIABLES BELOW
 
-// Jhon                                                       
-// --------------------------------   
-
-// greys
-$black                 : #000 !default;
-$gray-darkest          : #222 !default;
-$gray-darker           : #444 !default;
-$gray-dark             : #666 !default;
-$gray                  : #999 !default;
-$gray-light            : #ccc !default;
-$gray-lighter          : #e9e9e9 !default;
-$white                 : #fff !default;                         
-
-// colors
-$color-primary : #0896ff !default;
-$color-secondary : #00c051 !default;
-
-$color-error : #b84040 !default;
-$color-success : #5da423 !default;
-$color-deselect: #bfbfbf !default;
-
-$gray-border : #f2f2f2;
-$gray-comment-border: #d8d8d8;
-
-$color-success         : #5da423 !default;
-$color-deselect        : #bfbfbf !default;
-$gray-border           : #f2f2f2;
-
-
-// Frans                                                       
-// --------------------------------    
-
 // global colors
 $color-pri             : #ff619a !default;
 $color-pri-shadow      : #b42a5c !default;
 $color-sec             : #00c051 !default;
 $color-sec-shadow      : #00963f !default;
-$color-error           : #b84040 !default;
-$color-success         : $color-sec !default;
+
+// global black, white, grey
 $color-black           : #4a4a4a !default;
 $color-white           : #f8f7f8 !default;
 $color-grey-dark	   : #3c3c3c !default;
-$color-grey            : #999 !default; //usually for text
+$color-grey            : #999999 !default; //usually for text
 $color-grey-medium     : #d8d8d8 !default; // borders for box
 $color-grey-light      : #ededed !default; // outside borders for box
 $color-grey-lightest   : #f8f7f8 !default; // box background grey
 $color-grey-back       : #F6F5F7 !default; // background grey
 
-// errors
-$color-error           : #CA4040 !default;
-$color-error-back	   : #F4C5C5 !default;
-
 // real white & black (try avoiding these)
-$color-real-black      : #000 !default;
-$color-real-white      : #fff !default;
+$color-real-black      : #000000 !default;
+$color-real-white      : #ffffff !default;
+
+// corners
+$radius-small          : 2px !default;
+$radius-medium         : 4px !default;
+$radius-large          : 8px !default;
 
 // text
 $font-family-base      : 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
@@ -69,16 +38,11 @@ $color-text-on-dark    : $color-white;
 // forms
 $color-placeholder	   : #bababa !default;
 
-// corners
-$radius-small          : 2px !default;
-$radius-medium         : 4px !default;
-$radius-large          : 8px !default;
+// errors & success
+$color-error           : #CA4040 !default;
+$color-error-back	   : #F4C5C5 !default;
+$color-success         : $color-sec !default;
 
-
-// buttons
-
-// component: modal
-
-// component: wallpost
-
-// component detail-header
+// social
+$color-facebook: #3B5998 !default;
+$color-twitter: #55ACEE !default;
