--- a/bluebottle/common/static/refactor-sass/modules/_wallpost-update.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_wallpost-update.scss
@@ -66,7 +66,7 @@
 
                 a {
                     font-weight: bold;
-                    color: $color-secondary;
+                    color: $color-sec;
                 }
             }
         }
