--- a/bluebottle/bb_projects/templates/bb_projects/project.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/project.hbs
@@ -2,7 +2,7 @@
 
 {% tplhandlebars "project" %}
 <div id="project-detail">
-    <div id="project-detail-header" {{bindAttr class=":campaign-detail amount_asked::without"}}>
+    <div id="project-detail-header" {{bindAttr class=":campaign-detail"}}>
         <div class="project-background">
             <div class="project-background-image" {{bindAttr style=backgroundStyle}}></div>
         </div>
