--- a/bluebottle/bb_projects/templates/bb_projects/_project_actions_without_funding.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/_project_actions_without_funding.hbs
@@ -2,42 +2,39 @@
 
 
 {% tplhandlebars "_project_actions_without_funding" %}
-            <div class="row">
-                <div class="col8">
-                    <div class="project-status">
-                    </div>
-                </div>
-                <div class="col4">
+<section id="project-bar">
+    <div class="l-wrapper">
+    </div>
+</section>
 
-                </div>
-            </div>
-        </section>
-        <div id="project-members">
-            <section class="l-wrapper">
-                <div class="row">
-                    <div class="col4">
-                        <div class="member-initiator">
-                            <a {{action 'openInBigBox' 'userModal' owner }} class="member">
-                                <div class="row">
-                                    <div class="col3">
-                                        <figure class="photo">
-                                            <img {{bindAttr src="owner.getAvatar"}} />
-                                        </figure>
-                                    </div>
-                                    <div class="col9">
-                                        <h4>{% trans "Campaigner" %}</h4>
-                                        <strong class="name">{{owner.full_name}}</strong>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col8">
-                        <div class="project-member-supporters">
-                            {{simple-project-supporters supporters=recentSupporters showProfile="showProfile" limit=10}}
-                        </div>
-                    </div>
-                </div>
-            </section>
+<section id="project-users">
+    <div class="l-wrapper">
+        <div class="project-initiator">
+            <a {{action 'openInBigBox' 'userModal' owner }} class="user">
+                <figure class="user-avatar">
+                    <img {{bind-attr src="owner.getAvatar"}} />
+                </figure>
+                <span class="user-name">
+                    <strong>{% trans "Campaigner" %}</strong><br />
+                    <em>{{owner.full_name}}</em>
+                </span>
+            </a>
         </div>
+        <div class="project-action">
+            <div class="project-task">
+                {{#if isProjectOwner}}
+                    <a {{action 'addDonation' this}} data-action-type="create-task-campaign" class="button button-big"> {% trans "Create a Task" %}</a>
+                {{else}}
+                    {{#if hasTasks}}
+                        <div class="project-closed project-task-join">
+                            <strong data-action-type="join-task-campaign">
+                                {% trans "Join a Task" %}
+                            </strong>
+                        </div>
+                    {{/if}}
+                {{/if}}
+            </div>
+        </div>
+    </div>
+</section>
 {% endtplhandlebars %}
