--- a/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
@@ -8,9 +8,14 @@
 		{{#link-to "task" this class="item-link"}}
 			<strong class="item-title">{{title}}</strong>
 			<span class="item-meta">
-				<span class="item-people"><em>{{membersCount}}</em> {% trans "assigned" %}</span>
+			{{#if isStatusRealized}}
+				<span class="item-people"><em>{{membersCount}}</em> {% trans "people realised this task on" %}</span>
+				<span class="item-deadline"><em>{{localize deadline}}</em></span>
+			{{else}}
+				<span class="item-people"><em>{{membersNeeded}}</em> {% trans "of" %} {{people_needed}} {% trans "people needed" %}</span>
 				<span class="item-time"><em>{{time_needed}}</em> {% trans "hour" %}</span>
-				<span class="item-deadline"><em>{{localize deadline formatting="X"}}</em></span>
+				<span class="item-deadline"><em>{{localize deadline}}</em></span>
+			{{/if}}
 			</span>
 			{{#if isStatusOpen}}
 			    <span class="item-status task-open">{% trans "Open" %}</span>
