--- a/bluebottle/bb_tasks/templates/bb_tasks/project_tasks.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/project_tasks.hbs
@@ -78,7 +78,7 @@
 
 {% tplhandlebars "projectTasks/index" %}
 
-    {{# if isProjectOwner}}
+    {{# if isOwner}}
     <div class="owner-actions">
 
         <header>
