--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/base.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/base.hbs
@@ -12,3 +12,5 @@
 {% include "bb_fundraisers/project_fundraiser_all.hbs" %}
 {% include "bb_fundraisers/project_fundraiser_list.hbs" %}
 {% include "bb_fundraisers/project_fundraiser_popup.hbs" %}
+
+{% include "bb_fundraisers/components/project_fundraiser_item.hbs" %}
