--- a/bluebottle/bb_projects/templates/bb_projects/_project_actions_with_funding.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/_project_actions_with_funding.hbs
@@ -62,7 +62,7 @@
 
                 {{else}}
                     <div {{bindAttr class=":project-fund-amount-slider is_funded:is-funded"}}>
-                        {{bb-progressbar targetValue=amount_asked currentValue=amount_donated}}
+                        {{partial 'other_progressbars'}}
                     </div>
                     <p class="project-fund-amount">
                         <strong class="amount-donated">&euro; {{localize amount_donated}}</strong>
@@ -83,8 +83,8 @@
 
         <div class="project-action">
             {{#if isStatusCampaign}}
-                <a {{action 'addDonation' this}} data-action-type="donate" class="button button-big"> {% trans "Support project" %}</a>
-                {{view 'App.MpesaDonateView' class="mpesa-donate" }}
+                <a {{action 'addDonation' this}} data-action-type="donate" class="button button-big"> {{projectSupportName}}</a>
+                {{partial 'other_payments'}}
             {{else}}
                 <div class="project-closed">
                     <strong>{% trans "Campaign" %} {{#if is_funded}}{% trans "fully funded and" %} {{/if}}{% trans "closed" %}</strong><br />
@@ -103,7 +103,7 @@
                     <img {{bind-attr src="owner.getAvatar"}} />
                 </figure>
                 <span class="user-name">
-                    <strong>{% trans "Campaigner" %}</strong><br />
+                    <strong>{{projectTitle}}</strong><br />
                     <em>{{owner.full_name}}</em>
                 </span>
             </a>
