Styled wallpost-help, wallpost-history and wallpost-options
BOOK-956, BOOK-962

--- a/bluebottle/bb_accounts/templates/bb_accounts/_my_menu.hbs
+++ b/bluebottle/bb_accounts/templates/bb_accounts/_my_menu.hbs
@@ -37,7 +37,7 @@
     </li>
 
     <li>
-        <a {{action 'logout'}}>{%  trans "Logout" %}</a>
+        <a {{action 'logout'}}>{%  trans "Logout" %} YO!</a>
     </li>
 
 
