--- a/bluebottle/wallposts/templates/wallposts/_wallposts.hbs
+++ b/bluebottle/wallposts/templates/wallposts/_wallposts.hbs
@@ -14,6 +14,13 @@
     {{else}}
         {{partial 'signin'}}
     {{/if}}
+    
+    {{!-- TODO: Only display these when there are no wallposts --}}
+    {{#if canAddMediaWallpost}}
+        {{bb-wallpost-help}}
+    {{else}}
+        {{bb-wallpost-empty}}
+    {{/if}}
 
     {{#each wallpost in wallpostList}}
         {{#if wallpost.isLoaded}}
