--- a/bluebottle/wallposts/templates/wallposts/base.hbs
+++ b/bluebottle/wallposts/templates/wallposts/base.hbs
@@ -15,3 +15,6 @@
 
 {% include 'wallposts/components/bb-wallpost-comment-list.hbs' %}
 {% include 'wallposts/components/bb-wallpost-comment.hbs' %}
+
+{% include 'wallposts/components/bb-wallpost-help.hbs' %}
+{% include 'wallposts/components/bb-wallpost-empty.hbs' %}
