--- a/bluebottle/bb_accounts/templates/bb_accounts/_profile_anchor.hbs
+++ b/bluebottle/bb_accounts/templates/bb_accounts/_profile_anchor.hbs
@@ -1,10 +1,10 @@
 {% load i18n bb_ember %}
 
-
 {% tplhandlebars "_profile_anchor" %}
     <a href="#" class="nav-member-dropdown">
+		<img {{bindAttr src="currentUser.getAvatar" alt="currentUser.full_name"}}>
         <strong>
-            {% trans "Profile" %} &nbsp;
+            {{currentUser.full_name}}
         </strong>
     </a>
 {% endtplhandlebars %}
