cleanup the my tasks list page BOOK-988

--- a/bluebottle/bb_tasks/templates/bb_tasks/base.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/base.hbs
@@ -21,3 +21,4 @@
 {% include 'bb_tasks/project_tasks.hbs' %}
 
 {% include 'bb_tasks/my_tasks.hbs' %}
+{% include 'bb_tasks/_my_task_preview.hbs' %}
