--- a/bluebottle/wallposts/templates/wallposts/components/bb-wallpost-help.hbs
+++ b/bluebottle/wallposts/templates/wallposts/components/bb-wallpost-help.hbs
@@ -28,7 +28,7 @@
 	</div>
 	
 	<footer class="help-footer">
-		<a class="button button-big action-write-update">{% trans "Write your first update" %}</a>
+		<a {{action "focusOnInput"}} class="button button-big action-write-update">{% trans "Write your first update" %}</a>
 	</footer>
 </div>
 
