added dynamic date

--- a/bluebottle/wallposts/templates/wallposts/_wallposts.hbs
+++ b/bluebottle/wallposts/templates/wallposts/_wallposts.hbs
@@ -39,7 +39,7 @@
 
     {{#if isOwner}}
         {{#if ownerHasWallposts}}
-            {{bb-wallpost-first-timestamp}} 
+            {{bb-wallpost-first-timestamp model=model}} 
         {{else}}
             {{bb-wallpost-help focusOnInput='focusOnInput'}}
         {{/if}}
