--- a/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
@@ -8,14 +8,21 @@
 		{{#link-to "task" this class="item-link"}}
 			<strong class="item-title">{{title}}</strong>
 			<span class="item-meta">
-			{{#if isStatusRealized}}
-				<span class="item-people"><em>{{membersCount}}</em> {% trans "people realised this task on" %}</span>
-				<span class="item-deadline"><em>{{localize deadline}}</em></span>
-			{{else}}
+			{{#if isStatusOpen}}
 				<span class="item-people"><em>{{membersNeeded}}</em> {% trans "of" %} {{people_needed}} {% trans "people needed" %}</span>
 				<span class="item-time"><em>{{time_needed}}</em> {% trans "hour" %}</span>
-				<span class="item-deadline"><em>{{localize deadline}}</em></span>
 			{{/if}}
+			{{#if isStatusInProgress}}
+				<span class="item-people"><em>{{membersCount}}</em> {% trans "people accepted for this task" %}</span>
+			{{/if}}
+			{{#if isStatusClosed}}
+				<span class="item-people">{% trans "This task was cancelled" %}</span>
+			{{/if}}
+			{{#if isStatusRealized}}
+				<span class="item-people"><em>{{membersCount}}</em> {% trans "people realised this task on" %}</span>
+			{{/if}}
+
+				<span class="item-deadline"><em>{{localize deadline}}</em></span>
 			</span>
 			{{#if isStatusOpen}}
 			    <span class="item-status task-open">{% trans "Open" %}</span>
