--- a/bluebottle/wallposts/templates/wallpost_mail.mail.html
+++ b/bluebottle/wallposts/templates/wallpost_mail.mail.html
@@ -1,1 +1,15 @@
-test mail!
+{% extends "base.mail.html" %}
+{% load i18n %}
+
+{% block content %}
+{% blocktrans%}
+Hi {{first_name}},
+<br/>
+There has been an update on {{follow_object}}. 
+<br/><br/>
+{{wallpost_text}}...
+<br/><br/>
+Read the full story <a href={{link}}>here</a>.
+
+{% endblocktrans %}
+{% endblock %}
