--- a/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
+++ b/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
@@ -2,7 +2,14 @@
 {% load i18n %}
 
 {% block content %}
-{% blocktrans with receiver_name=receiver.first_name author_name=author.full_name %}
+{% blocktrans%}
+Hi {{first_name}},
+<br/>
+There has been an update on {{follow_object}}. 
+<br/><br/>
+{{wallpost_text}}...
+<br/><br/>
+Read the full story <a href={{link}}>here</a>.
 
 {% endblocktrans %}
 {% endblock %}
