mail tpl update

--- a/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
+++ b/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
@@ -5,8 +5,10 @@
 {% blocktrans%}
 Hi {{first_name}},
 <br/>
-There has been an update on {{follow_object}}. 
+<br/>
+There has been an update on a {{follow_object}} you follow. 
 <br/><br/>
+Here's an excerpt of the update:<br/>
 {{wallpost_text}}...
 <br/><br/>
 Read the full story <a href={{link}}>here</a>.
