use double quotes for template to be picked up

--- a/bluebottle/bb_projects/templates/bb_projects/manage/start.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/manage/start.hbs
@@ -1,6 +1,6 @@
 {% load bb_ember i18n static %}
 
-{% tplhandlebars 'my_project_start' %}
+{% tplhandlebars "my_project_start" %}
 
         <h1 class="page-title">{% trans "Project start" %}</h1>
         <br />
