small changes task summary

--- a/bluebottle/common/static/refactor-sass/modules/_activity.scss
+++ b/bluebottle/common/static/refactor-sass/modules/_activity.scss
@@ -191,6 +191,7 @@
         }
 
         .item-meta {
+        font-size: 12px;
 
             em {
                 font-style: normal;
@@ -198,7 +199,7 @@
 
             span {
                 display: inline;
-                margin-right: 10px;
+                margin-right: 5px;
             }
         }
 
