--- a/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
@@ -9,8 +9,8 @@
             <strong class="item-title">{{title}}</strong>
             <span class="item-meta">
                 {{#if isStatusOpen}}
-                    <span class="item-people"><em>{{membersNeeded}}</em> {% trans "of" %} {{people_needed}} {% trans "people needed" %}</span>
-                    <span class="item-time"><em>{{time_needed}}</em> {% trans "hour" %}</span>
+                    <span class="item-people"><em>{{people_needed}} </em> {% trans "needed" %} / {{membersNeeded}} {% trans "accepted" %}</span>
+                    <span class="item-time"><em>{{time_needed}}</em> {% trans "hours" %}</span>
                 {{/if}}
                 {{#if isStatusInProgress}}
                     <span class="item-people"><em>{{membersCount}}</em> {% trans "people accepted for this task" %}</span>
