--- a/bluebottle/bb_accounts/templates/bb_accounts/_my_menu.hbs
+++ b/bluebottle/bb_accounts/templates/bb_accounts/_my_menu.hbs
@@ -8,21 +8,21 @@
         {{/link-to }}
         <ul>
             <li>
-                {{#if currentUser.hasCurrentDonation}}
+                {{#if currentUser.donationCount}}
                     {{#link-to "myDonationList" }}
                         {% trans "Donations" %}
                     {{/link-to}}
                 {{/if}}
             </li>
             <li>
-                {{#if currentUser.hasCurrentCampaign}}
+                {{#if currentUser.campaignCount}}
                     {{#link-to 'myProjectList'}}
                         {% trans "Campaigns" %}
                     {{/link-to}}
                 {{/if}}
             </li>
             <li>
-                {{#if currentUser.hasCurrentTask}}
+                {{#if currentUser.taskCount}}
                     {{#link-to 'myTaskList'}}
                         {% trans "Tasks" %}
                     {{/link-to}}
