changed tasks copy

--- a/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task_summary.hbs
@@ -19,7 +19,7 @@
                     <span class="item-people">{% trans "This task was cancelled" %}</span>
                 {{/if}}
                 {{#if isStatusRealized}}
-                    <span class="item-people"><em>{{membersCount}}</em> {% trans "people realised this task on" %}</span>
+                    <span class="item-people">{% trans "This task was realized" %}</span>
                 {{/if}}
                 <span class="item-deadline"><em>{{localize deadline}}</em></span>
             </span>
